candle-einops-macros/tests/ui/fail/missing-group-axis-size.stderr
error: proc macro panicked
 --> tests/ui/fail/missing-group-axis-size.rs:4:13
  |
4 |     let _ = einops!("a -> (a b)", ());
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: New identifier with no shape specified on the right side
